--- a/server/config.env
+++ b/server/config.env
@@ -1,2 +1,3 @@
 DATABASE=mongodb+srv://Vedant:Vedant%4024@mernproject.hbxa2ku.mongodb.net/mern_project
 PORT=3000
+SECRET_KEY=MY_NAME_IS_VEDANT_KHAMAR_HELLO_WORLD_HOW_ARE_YOU
